Closed Bug 1171555 Opened 10 years ago Closed 10 years ago

ServiceWorkerManager.cpp emits WARNING: 'NS_FAILED(rv)' and WARNING: '!BasePrincipal::IsCodebasePrincipal(aPrincipal)' over 20,000 times in linux debug test logs

Categories

(Core :: DOM: Service Workers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: erahm, Assigned: erahm)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

If this is a real bug it should be fixed, otherwise we might want to consider silencing it. > WARNING: 'NS_FAILED(rv)', file /builds/slave/m-cen-l64-d-000000000000000000/build/src/dom/workers/ServiceWorkerManager.cpp, line 2529
> WARNING: '!BasePrincipal::IsCodebasePrincipal(aPrincipal)', file /builds/slave/m-cen-l64-d-000000000000000000/build/src/dom/workers/ServiceWorkerManager.cpp, line 2591 is emitted the same number of times.
Summary: ServiceWorkerManager.cpp emits WARNING: 'NS_FAILED(rv)' over 20,000 times in linux debug test logs → ServiceWorkerManager.cpp emits WARNING: 'NS_FAILED(rv)' and WARNING: '!BasePrincipal::IsCodebasePrincipal(aPrincipal)' over 20,000 times in linux debug test logs
Attachment #8621063 - Flags: review?(bkelly)
Assignee: nobody → erahm
Status: NEW → ASSIGNED
Comment on attachment 8621063 [details] [diff] [review] Remove overly verbose ServiceWorker warnings Review of attachment 8621063 [details] [diff] [review]: ----------------------------------------------------------------- r+ since clearly we're hitting these warnings for a common path.
Attachment #8621063 - Flags: review?(bkelly) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: