Bug 1171555 - Remove overly verbose ServiceWorker warnings. r=bkelly